--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,6 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
     <deployPath>/EndoVar</deployPath>
   </properties>
 
@@ -31,12 +29,6 @@
     </dependency>
 
     <!-- For tests -->
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>2.2.224</version>
-    </dependency>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -61,6 +53,14 @@
         <configuration>
           <projectPath>./</projectPath>
         </configuration>
+        <dependencies>
+          <dependency>
+             <groupId>org.postgresql</groupId>
+             <artifactId>postgresql</artifactId>
+             <version>[42.0.0,)</version>
+             </dependency>
+        </dependencies>
+
         <executions>
             <execution>
                 <id>generate-context</id>
@@ -83,26 +83,13 @@
                 </configuration>
             </execution>
         </executions>
-        <!-- duplicate for (ModuleLoader2.class).getClassLoader().getResources(PROJECT_FILE_NAME); -->
-        <dependencies>
-            <dependency>
-                <groupId>com.developmentontheedge.be5.modules</groupId>
-                <artifactId>be5-modules-core</artifactId>
-                <version>[0.4.0,)</version>
-            </dependency>
-            <dependency>
-                <groupId>com.h2database</groupId>
-                <artifactId>h2</artifactId>
-                <version>2.2.224</version>
-            </dependency>
-            <!-- Your target database -->
-            <dependency>
-                <groupId>org.postgresql</groupId>
-                <artifactId>postgresql</artifactId>
-                <version>[42.0.0,)</version>
-            </dependency>
-        </dependencies>
       </plugin>
+<plugin>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-maven-plugin</artifactId>
+    <version>9.4.0.M0</version>
+</plugin>
+
     </plugins>
   </build>
 
