--- a/src/meta/entities/snvs.yaml
+++ b/src/meta/entities/snvs.yaml
@@ -10,70 +10,70 @@ snvs:
         autoIncrement: true
         primaryKey: true
         doc: SNV internal identifier.
-    - Variant:
+    - V:
         type: VARCHAR(50)
         doc: Variant
-    - Chromosome:
+    - C:
         type: VARCHAR(20)
         doc: Chromosome number
-    - Position:
+    - P:
         type: VARCHAR(20)
         doc: SNV position
-    - REF:
+    - R:
         type: VARCHAR(20)
         doc: Reference base
-    - ALT:
+    - A:
         type: VARCHAR(20)
         doc: Alternative base
-    - Gene:
+    - G:
         type: VARCHAR(20)
         canBeNull: true
         doc: Gene name
-    - Pathogenicity:
+    - Pa:
         type: VARCHAR(50)
         canBeNull: true
         doc: Algorithmically predicted pathogenicity level
-    - GNOMAD3_AF:
+    - GAF:
         type: VARCHAR(20)
         canBeNull: true
         doc: gnomAD allele frequency
-    - GNOMAD3_nhomalt:
+    - Glt:
         type: VARCHAR(20)
         canBeNull: true
         doc: gnomaAD number of homozygotes
-    - RUSeq:
+    - Rq:
         type: VARCHAR(20)
         canBeNull: true
         doc: RUSeq allele frequency
-    - ClinVar_ID:
+    - CID:
         type: VARCHAR(20)
         canBeNull: true
         doc: variant ID in ClinVar database    
-    - ClinVar_signif:
+    - Cif:
         type: VARCHAR(100)
         canBeNull: true
         doc: Clinical interpretation of the variant by submitters
-    - OMIM:
+    - OM:
         type: VARCHAR(20)
         canBeNull: true
         doc: OMIM ID
-    - VEP_IMPACT:
+    - VCT:
         type: VARCHAR(20)
         canBeNull: true
         doc: Variant impact on protein       
-    - SPLICE_AI:
+    - SAI:
         type: VARCHAR(20)
         canBeNull: true
         doc: Predicted effect on splicing by SpliceAI tool
-    - Meta_SVM:
+    - MVM:
         type: VARCHAR(20)
         canBeNull: true
         doc: MetaSVM prediction
-    - BayesDel:
+    - BDl:
         type: VARCHAR(20)
         canBeNull: true
         doc: BayesDel prediction
-    - CADD:
+    - CD:
         type: VARCHAR(20)
         canBeNull: true
         doc: CADD_phred score
@@ -86,13 +86,13 @@ snvs:
         code: |
             SELECT 
                 ID AS "Code",
-                Chromosome AS "CHR",
-                Position,
-                REF,
-                ALT,
-                Gene
+                C AS "CHR",
+                P AS "Position",
+                R AS "REF",
+                A AS "ALT",
+                G AS "Gene"
             FROM snvs
-            ORDER BY Chromosome
+            ORDER BY C
 
     - All records:
         type: 1D
@@ -101,22 +101,22 @@ snvs:
         code: |
             SELECT 
                 ID AS "Code",
-                Variant,
-                Chromosome AS "CHR",
-                Position,
-                REF,
-                ALT,
-                Gene,
-                Pathogenicity AS "Pathogenicity;<quick visible='true' />",
-                GNOMAD3_AF AS "GNOMAD3_AF;<quick visible='true' />",
-                GNOMAD3_nhomalt AS "GNOMAD3_nhomalt;<quick visible='true' />",
-                RUSeq AS "RUSeq;<quick visible='true' />",
-                ClinVar_ID AS "ClinVar_ID;<quick visible='true' />",
-                ClinVar_signif AS "ClinVar_significance;<quick visible='true' />",
-                OMIM AS "OMIM_ID;<quick visible='true' />",
-                VEP_IMPACT AS "VEP_IMPACT;<quick visible='true' />",
-                SPLICE_AI AS "SPLICE_AI;<quick visible='true' />",
-                Meta_SVM AS "Meta_SVM;<quick visible='true' />",
-                BayesDel AS "BayesDel;<quick visible='true' />",
-                CADD AS "CADD;<quick visible='true' />"
+                V AS "Variant;<quick visible='true' />",
+                C AS "CHR",
+                P AS "Position",
+                R AS "REF",
+                A AS "ALT",
+                G AS "Gene",
+                Pa AS "Pathogenicity;<quick visible='true' />",
+                GAF AS "GNOMAD3_AF;<quick visible='true' />",
+                Glt AS "GNOMAD3_nhomalt;<quick visible='true' />",
+                Rq AS "RUSeq;<quick visible='true' />",
+                CID AS "ClinVar_ID;<quick visible='true' />",
+                Cif AS "ClinVar_significance;<quick visible='true' />",
+                OM AS "OMIM_ID;<quick visible='true' />",
+                VCT AS "VEP_IMPACT;<quick visible='true' />",
+                SAI AS "SPLICE_AI;<quick visible='true' />",
+                MVM AS "Meta_SVM;<quick visible='true' />",
+                BDl AS "BayesDel;<quick visible='true' />",
+                CD AS "CADD;<quick visible='true' />"
             FROM snvs
