--- a/src/meta/entities/cnvs.yaml
+++ b/src/meta/entities/cnvs.yaml
@@ -48,26 +48,22 @@ cnvs:
 
   queries:
 
-    - '*** Selection view ***':
-        type: 1D
-        roles: '@AllRoles'
-        code: |
-            SELECT 
-                ID AS "Code",
-                gene,
-                CHR,
-                Positions,
-                status
-            FROM cnvs
-            ORDER BY CHR
+    - ChromosomeSelectionView:
+        type: 1D_unknown
+        code: |-
+          SELECT 
+            chr,
+            chr
+          FROM CNVs
+          GROUP BY chr
+          ORDER BY chr
 
     - All records:
         type: 1D
         roles: '@AllRoles'
-        #layout: '{"topForm":"TopFilter", "quickType":"select"}'
-        layout: '{"quickType":"select"}'
-        #operations:
-        #- TopFilter
+        layout: '{"topForm":"CNVFilter", "quickType":"select"}'
+        operations:
+        - CNVFilter
         code: |
             SELECT 
                 ID AS "Code",
@@ -83,7 +79,16 @@ cnvs:
                 Newly_discovered AS "Newly_discovered;<quick visible='true' />",
                 ClinVar AS "ClinVar;<quick visible='true' />"
             FROM cnvs
+            WHERE (1=1)
+            <if parameter="gene">
+                AND gene = '<parameter:gene/>'
+            </if>
+            <if parameter="chr">
+                AND chr = '<parameter:chr/>'
+            </if>
+
             ORDER BY CHR
+
 #    - Card:
  #       layout: '{"tableBox":"gene", "mode":"named", "hideTitle":"true"}'
  #       invisible: true
@@ -101,3 +106,9 @@ cnvs:
   #          SELECT
    #             name
    #         FROM genes
+
+  operations:
+  - CNVFilter:
+      type: Groovy
+      roles: '@AllRoles'
+      file: operations.filters.CNVFilter.groovy
