add table with all cnv

--- a/project.yaml
+++ b/project.yaml
@@ -18,10 +18,11 @@ EndoVar:
   - genes
   - cnvs
   - snvs
-
+  - cnvsall
   scripts:
   - Post-db
   - dictionaries
   - genes
   - cnvs
   - snvs
+  - cnvsall
