--- a/src/meta/entities/snvs.yaml
+++ b/src/meta/entities/snvs.yaml
@@ -123,7 +123,7 @@ snvs:
             FROM snvs
             WHERE (1=1)
             <if parameter="Variant">
-              AND V = '<parameter:Variant/>'
+              AND V LIKE '<parameter:Variant/>%'
             </if>          
 
   operations:
