--- a/project.yaml
+++ b/project.yaml
@@ -19,6 +19,7 @@ EndoVar:
   - cnvs
   - snvs
   - cnvsall
+  - genesupdated
   scripts:
   - Post-db
   - dictionaries
@@ -26,3 +27,4 @@ EndoVar:
   - cnvs
   - snvs
   - cnvsall
+  - genesupdated
