add updated CNV table with CNV_stats

--- a/project.yaml
+++ b/project.yaml
@@ -21,6 +21,7 @@ EndoVar:
   - cnvsall
   - genesupdated
   - cnvsallupdated
+  - cnvsfinal
   scripts:
   - Post-db
   - dictionaries
@@ -30,3 +31,4 @@ EndoVar:
   - cnvsall
   - genesupdated
   - cnvsallupdated
+  - cnvsfinal
