--- a/src/meta/entities/cnvs.yaml
+++ b/src/meta/entities/cnvs.yaml
@@ -72,7 +72,7 @@ cnvs:
 
     - All records:
         type: 1D
-        roles: '@AllRoles'
+        roles: '@Guest'
         layout: '{"topForm":"CNVFilter", "quickType":"select"}'
         operations:
         - CNVFilter
