--- a/project.yaml
+++ b/project.yaml
@@ -22,6 +22,7 @@ EndoVar:
   - genesupdated
   - cnvsallupdated
   - cnvsfinal
+  - tiers
   scripts:
   - Post-db
   - dictionaries
@@ -32,3 +33,4 @@ EndoVar:
   - genesupdated
   - cnvsallupdated
   - cnvsfinal
+  - tiers
