--- a/src/meta/entities/genesupdated.yaml
+++ b/src/meta/entities/genesupdated.yaml
@@ -109,7 +109,7 @@ genesupdated:
                 '<sql using="HGNC">SELECT count(*) FROM tiers t 
                  WHERE t.G = ? </sql>' 
                 AS "SNV;<quick visible='true' />",
-                '<link table="snvs" using="HGNC" columns="gene" />' AS ";SNV"
+                '<link table="tiers" using="HGNC" columns="gene" />' AS ";SNV"
             FROM genesupdated gup
 
             WHERE (1=1)
