--- a/src/meta/entities/snvs.yaml
+++ b/src/meta/entities/snvs.yaml
@@ -93,42 +93,41 @@ snvs:
     - All records:
         type: 1D
         roles: '@Guest'
-        layout: '{"topForm":"SNVFilter", "quickType":"select"}'
-        operations:
-        - SNVFilter
-        code: |
-            SELECT
-                s.V AS "Variant;<quick visible='true' />",
-                s.C AS "CHR",
-                s.P AS "Position",
-                s.R AS "REF",
-                s.A AS "ALT",
-                t.G AS "Gene",
-                t.VCT AS "VEP_IMPACT;<quick visible='true' />",
-                t.VC AS "VEP_consequence;<quick visible='true' />",
-                t.Exon AS "Exon;<quick visible='true' />",
-                t.aac AS "Aminoacid change;<quick visible='true' />",
-                t.cdnac AS "cDNA change;<quick visible='true' />",
-                t.Pa AS "Pathogenicity;<quick visible='true' />",
-                t.GAF AS "GNOMAD3_AF;<quick visible='true' />",
-                t.Glt AS "GNOMAD3_nhomalt;<quick visible='true' />",
-                t.OMphe AS "OMIM_phenotype;<quick visible='true' />",
-                t.SAI AS "SPLICE_AI;<quick visible='true' />",
-                t.MVM AS "Meta_SVM;<quick visible='true' />",
-                t.BDl AS "BayesDel;<quick visible='true' />",
-                t.CD AS "CADD;<quick visible='true' />"
-            FROM snvs s
-            LEFT JOIN tiers t ON s.V = t.V 
-            WHERE (1=1)
-            <if parameter="Variant">
-              AND V LIKE '<parameter:Variant/>%'
-            </if>  
-            <if parameter="gene">
-              AND t.G = '<parameter:gene/>'
-            </if>        
+ #       layout: '{"topForm":"SNVFilter", "quickType":"select"}'
+ #       operations:
+ #       - SNVFilter
+ #       code: |
+ #           SELECT
+ #               s.V AS "Variant;<quick visible='true' />",
+ ##               s.P AS "Position",
+  #              s.R AS "REF",
+  #              s.A AS "ALT",
+  #              t.G AS "Gene",
+  #              t.VCT AS "VEP_IMPACT;<quick visible='true' />",
+ #               t.VC AS "VEP_consequence;<quick visible='true' />",
+ #               t.Exon AS "Exon;<quick visible='true' />",
+ #               t.aac AS "Aminoacid change;<quick visible='true' />",
+ #               t.cdnac AS "cDNA change;<quick visible='true' />",
+ #               t.Pa AS "Pathogenicity;<quick visible='true' />",
+  #              t.GAF AS "GNOMAD3_AF;<quick visible='true' />",
+  #              t.Glt AS "GNOMAD3_nhomalt;<quick visible='true' />",
+  #              t.OMphe AS "OMIM_phenotype;<quick visible='true' />",
+  #              t.SAI AS "SPLICE_AI;<quick visible='true' />",
+  #              t.MVM AS "Meta_SVM;<quick visible='true' />",
+  #              t.BDl AS "BayesDel;<quick visible='true' />",
+  #              t.CD AS "CADD;<quick visible='true' />"
+  #          FROM snvs s
+  #          LEFT JOIN tiers t ON s.V = t.V 
+ #           WHERE (1=1)
+ #           <if parameter="Variant">
+ #             AND V LIKE '<parameter:Variant/>%'
+#            </if>  
+#            <if parameter="gene">
+#              AND t.G = '<parameter:gene/>'
+#            </if>        
 
-  operations:
-  - SNVFilter:
-      type: Groovy
-      roles: '@AllRoles'
-      file: operations.filters.SNVFilter.groovy
+#  operations:
+#  - SNVFilter:
+#      type: Groovy
+ #     roles: '@AllRoles'
+ #     file: operations.filters.SNVFilter.groovy
