--- a/project.yaml
+++ b/project.yaml
@@ -24,6 +24,7 @@ EndoVar:
   - cnvsfinal
   - tiers
   - snvspats
+  - itogsnvs
   scripts:
   - Post-db
   - dictionaries
@@ -36,3 +37,4 @@ EndoVar:
   - cnvsfinal
   - tiers
   - snvspats
+  - itogsnvs
