--- a/src/meta/entities/snvspats.yaml
+++ b/src/meta/entities/snvspats.yaml
@@ -113,7 +113,7 @@ snvspats:
 
     - All records:
         type: 1D
-        roles: '@AllRoles'
+        roles: '@Guest'
         layout: '{"topForm":"SNVFilter", "quickType":"select"}'  
         operations:
         - SNVFilter      
